some polish stuff

--- a/localisation/english/PB_country_specific/PB_Poland_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Poland_l_english.yml
@@ -10,19 +10,18 @@ POL_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Restore Polish dominance in Ce
   # MINISTERS
   ##########################
 
-POL_PB_Jedrzej_Giertych_HOG:0 "Jędrzej Giertych"
-POL_PB_Wladyslaw_Grabski_ECM:0 "Władysław Grabski"
-POL_PB_Stefan_Sacha_FAM:0 "Stefan Sacha"
-POL_PB_Nikolai_Ivanov_IAM:0 "Nikolai Ivanov"
-POL_PB_Jedrzej_Giertych_FAM:0 "Jędrzej Giertych"
-POL_PB_Marian_Seyda_FAM:0 "Marian Seyda"
-POL_PB_Eustachy_Sapiecha_FAM:0 "Eustachy Sapieha"
-POL_PB_Lavrentiy_Beria_IAM:0 "Lavrentiy Beria"
-POL_PB_Stanislaw_Bulak-Balachowicz_IAM:0 "Stanisław Bułak-Bałachowicz"
-POL_PB_Wladyslaw_Grabski_HOG:0 "Władysław Grabski"
-POL_PB_Janusz_Radziwill_HOG:0 "Janusz Radziwiłł"
-POL_PB_Wiktor_Jaronski_HOG:0 "Wiktor Jaroński"
-POL_PB_Jozef_Kiedron_ECM:0 "Józef Kiedroń"
+PB_Jedrzej_Giertych:0 "Jędrzej Giertych"
+PB_Wladyslaw_Grabski:0 "Władysław Grabski"
+PB_Stefan_Sacha:0 "Stefan Sacha"
+PB_Nikolai_Ivanov:0 "Nikolai Ivanov"
+PB_Marian_Seyda:0 "Marian Seyda"
+PB_Eustachy_Sapieha:0 "Eustachy Sapieha"
+PB_Lavrentiy_Beria:0 "Lavrentiy Beria"
+PB_Stanislaw_Bulak-Balachowicz:0 "Stanisław Bułak-Bałachowicz"
+PB_Wladyslaw_Grabski:0 "Władysław Grabski"
+PB_Janusz_Radziwill:0 "Janusz Radziwiłł"
+PB_Wiktor_Jaronski:0 "Wiktor Jaroński"
+PB_Jozef_Kiedron:0 "Józef Kiedroń"
 
   ##########################
   # FOCUS
@@ -114,7 +113,7 @@ PB_POL_Attract_Retired_Officers:0 "Attract Retired Officers"
 PB_POL_Invite_Okhrana_Specialists:0 "Invite Okhrana Specialists"
 PB_POL_Jar_731:0 "JAR 731"
 PB_POL_Eastern_Wind:0 "Eastern Wind"
-PB_POL_Path_Of_Grand_Duke:0 "Path of Grand Duke"
+PB_POL_Path_Of_Grand_Duke:0 "The Path of the Grand Duke"
 PB_POL_Mikhail_Builder_Of_The_New_World:0 "Mikhail, Builder of the New World"
 PB_POL_Embrace_Russian_Pan_Slavism:0 "Embarce Russian Pan-Slavism"
 PB_POL_Slavs_Conquer_Heavens:0 "Slavs Conquer Heavens"
@@ -256,8 +255,9 @@ PB_POL_Little_Green_Men_alternative:0 "We Absolutely Love Russia"
 PB_POL_Lithuanian_Crisis_alternative:0 "Protecting One Another"
 
 
-
-
+PB_POL_Galicia_Annexation:0 "This will lower the cost required for coring galician territories"
+PB_POL_Galicia_Annexation_Red_Book:0 "This will hinder any resistance in Galicia"
+PB_POL_Peace_In_Galicia:0 "This will unlock decisions allowing us, to fight with gangs in Galicia and eventually core all of its former territory"
 
 
 
@@ -393,24 +393,30 @@ PB_POL_Industralist_Influence_Less_70_tt:0 "Industrialists have influence less t
 PB_POL_Namiestniks_Influence_Less_50_tt:0 "Namiestnik's Office has influence less than 50"
 PB_POL_Industralist_Influence_Less_50_tt:0 "Industrialists have influence less than 50"
 PB_POL_Conservatives_Influence_Less_50_tt:0 "Conservatives have influence less than 50"
-PB_POL_Modarates_Influence_Less_50_tt:0 "Grabski Group has influence less than 50"
+PB_POL_Modarates_Influence_Less_50_tt:0 "Grabski's Group has influence less than 50"
 PB_POL_Radicals_Influence_More_89_tt:0 "Giertych's Cilque has influence 90 or more"
 PB_POL_Radicals_Influence_More_69_tt:0 "Giertych's Cilque has influence 70 or more"
 PB_POL_Industralist_Influence_More_59_tt:0 "Industrialsts have influence 60 or more"
 PB_POL_Industralist_Influence_More_49_tt:0 "Industrialsts have influence 50 or more"
 PB_POL_Industralist_Influence_More_39_tt:0 "Industrialsts have influence 40 or more"
+PB_POL_Namiestniks_Influence_More_29_tt:0 "Namiestnik's Office has influence 30 or more"
 PB_POL_Namiestniks_Influence_More_59_tt:0 "Namiestnik's Office has influence 60 or more"
 PB_POL_Namiestniks_Influence_More_69_tt:0 "Namiestnik's Office has influence 70 or more"
 PB_POL_Namiestniks_Influence_More_89_tt:0 "Namiestnik's Office has influence 90 or more"
 PB_POL_Radicals_Influence_Less_50_tt:0 "Giertych's Cilque have influence less than 50"
-PB_POL_Industralist_Support_More_49_tt:0 "Industrialsts support is 50 or more"
+PB_POL_Industralist_Support_More_49_tt:0 "Industrialsts' support is 50 or more"
 PB_POL_Industralist_Influence_More_70_tt:0 "Industrialists have influence 70 or more"
 PB_POL_Namiestniks_Influence_More_49_tt:0 "Namiestnik's Office has influence 50 or more"
 PB_POL_Industralist_Influence_More_49_tt:0 "Industrialists have influence 50 or more"
 PB_POL_Conservatives_Influence_More_49_tt:0 "Conservatives have influence 50 or more"
-PB_POL_Modarates_Influence_More_49_tt:0 "Grabski Group has influence 50 or more
+PB_POL_Modarates_Influence_More_49_tt:0 "Grabski;s Group has influence 50 or more"
 PB_POL_Radicals_Influence_More_49_tt:0 "Giertych's Cilque has influence 50 or more"
-PB_POL_Namiestniks_Influence_Less_30_tt:0 "Namiestnik's Office support is 20 or less"
+PB_POL_Namiestniks_Support_Less_30_tt:0 "Namiestnik's Office support is 20 or less"
+PB_POL_Namiestniks_Support_More_39_tt:0 "Namiestnik's Office support is 40 or more"
+PB_POL_Namiestniks_Support_More_49_tt:0 "Namiestnik's Office support is 50 or more"
+PB_POL_Radicals_Support_More_49_tt:0 "Giertych’s Clique support is 50 or more"
+PB_POL_Moderates_Support_More_49_tt:0 "Grabski's Group support is 50 or more"
+PB_POL_Namiestniks_Support_More_29_tt:0 "Namiestnik's Office support is 30 or more"
 
 
 
@@ -637,12 +643,15 @@ pol.60.a:0 ""
 pol.60.t:0 ""
 pol.60.d:0 ""
 pol.60.a:0 ""
-pol.60.t:0 ""
-pol.60.d:0 ""
-pol.60.a:0 ""
-pol.60.t:0 ""
-pol.60.d:0 ""
-pol.60.a:0 ""
+pol.70.t:0 "MARTIAL LAW"
+pol.70.d:0 "At five o’clock in the morning, Russian troops left their bases scattered throughout the Autonomy and began occupying local government offices with minimal or no resistance from the Polish uniformed services. Higher officers, together with bureaucrats from the Namiestnik’s Office, forced the entire government to immediately resign. Additional army units simultaneously crossed the Imperial border and are advancing in a long column towards Warsaw, which has been temporarily declared a territory excluded from Polish jurisdiction. Telephones, radio, television, newspapers, and mail are currently not functioning.\nMany observers and social activists had expected that the ongoing impasse between the government of the Autonomy and the Tsarist administration would lead to increased tensions, but all had hoped to avoid a forceful resolution. As it turns out, that was not the case.\nIn an afternoon statement, the chairman of the Russo-Polish Lobby, Wiktor Jaroński, announced his appointment as acting prime minister and enacting of martial law on the whole territory of the Autonomy. At the same time, he wholeheartedly thanked the soldiers of the Russian army for their ‘efficient and bloodless elimination of elements hostile to Poland and the entire Empire’."
+pol.70.a:0 "Only fool didn't see that coming"
+pol.71.t:0 "Choosing Project Overseer"
+pol.71.d:0 "The first shovels have broken ground, excavators and dump trucks are rolling onto the construction sites, and funds are being transferred from the budget to the appropriate accounts. The massive undertaking that is the construction of the Warsaw Subway is now in full swing—but one issue remains. A project of this scale draws significant attention, and there's no doubt that many would love to dip their beak into the potential profits that success might bring./nWho will we allow to do so?"
+pol.71.a:0 "Adam Doboszyński, military engineer"
+pol.71.b:0 "Nikolai Streletsky, railway expert"
+pol.71.c:0 "Jan Brzostowski, mining specialist"
+pol.71.e:0 "Albert Speer, Berlin subway constructor"
 
 pol.500.t:0 "Who is this man?"
 pol.500.d:0 "The corridors of the Security Office always seemed dark and twisted to him, but this time, he felt like he was venturing deep into the belly of some enormous beast. Like in the Minotaur’s labyrinth—every step required caution, and getting lost was easier than hearing Russian on street.\n’Did you see it?’ his superior, Captain S., asked as he closed the door to his office. Unlike the rest of the building, this room was bright—too bright. The stark, nearly blinding white light always made him feel like a tiny ant being scrutinized under a researcher’s magnifying glass. Except this time, the one observing wasn’t a scientist, but a diminutive man with dusky skin, bottle-thick glasses, and lifeless, motionless shark-like eyes. He tried his best not to show fear—fear was the beginning of the end.\n’No, but I heard about it.’\n’Well, take a look,’ S. said casually, tossing a cream-colored envelope with one edge slit open. With slightly trembling fingers, he pulled out the first photo. It showed a man—no longer young, but still in excellent shape. Painted lips, shadowed eyelids, and a stylish dress paired with his delicate features might have deceived him into thinking this was a woman... if he didn’t already know who it was.\n’Is this from the Archangel?’\nS. simply nodded.\nHis throat went dry. Officially, they weren’t allowed to drink on duty, but in practice, no one paid attention. He took a deep swig from his flask.\n‘We have about twenty more like this,’ the captain spoke in his cold, detached voice. ‘Apparently, they call people like this’ — he paused for a moment – ‘femboys.’\nHe placed the photo down gently, as though it was a bomb. He had to admit, Prince Yusupov looked rather good in women’s clothes. He took another sip of alcohol.\n’What do we do with it now?’"
@@ -788,7 +797,8 @@ PB_Popular_Aviator:0 "Popular Aviator"
  PB_POL_Increse_Industralists_Influence_tt:0 "Influence of §YIndustralists§! will increase!\n\n"
  PB_POL_Decrease_Industrialists_Influence_tt:0 "Influence of §YIndustralists§! will decrease!\n\n"
 
-
+PB_POL_Better_Polish_Than_Russian:0 "Better be Polish than Russian"
+PB_POL_Peace_In_Galicia: "Bring order to [FROM.GetName]"
 
  POL_coalition_takeover:0 "During takeover"
  POL_conservatives_in_coalition:0 "Conservatives in coalition"
@@ -816,6 +826,11 @@ PB_Popular_Aviator:0 "Popular Aviator"
 
  PB_POL_Add_Conservatives_Requirement_tt:0 "Namiestnik's Office influence must be 80 or higher, otherwise other factions won't agree to add conservatives to coalition."
  PB_POL_Add_Conservatives_To_Coalition_tt:0 "This will add Conservatives to coalition and will greatly reduce Namiestnik's influence, but will also affect our position and support of other factions."
+
+ POL_Namiestnik_Gains_Influence:0 "Namiestnik's Office Gains Influence"
+ POL_Russian_Intervention:0 "Incomig Russian Intervention"
+ PB_POL_Warsaw_Subway_Construction:0 "Begin Warsaw Subway Construction"
+ PB_POL_Give_Concessions_To_Russian_Companies:0 "Give Concessions to Russian Companies"
 
 #anters
 PB_POL_Militarize_Anters_tt:0 "Unlocks §YWeigl Ants Military Modifications§! Decisions"
