--- a/localisation/english/PB_country_specific/PB_Denmark_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Denmark_l_english.yml
@@ -6,7 +6,7 @@
   ######################
 
   ### LEADERS ###
-  DEN_christian_x: "Christian X"
+  DEN_frederik_ix: "Frederik IX"
 
   ### GENERALS ###
   DEN_william_prior: "William Prior"
