--- a/localisation/english/PB_country_specific/PB_Norway_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Norway_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
   ### LEADERS ###
-  NOR_christian_x: "Christian X"
+  NOR_frederik_ix: "Frederik IX"
 
   ### GENERALS ###
   NOR_carl_fleischer: "Carl G. Fleischer"
