--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -580,8 +580,8 @@
   FST_jc_party_long:0 "Front pour l’Australie Libre"
   FST_lb_party:0 "CLdA"
   FST_lb_party_long:0 "Conseil Libre d’Australie"
-  FST_cn_party:0 "Brévié Government"
-  FST_cn_party_long:0 "Brévié Government"
+  FST_cn_party:0 "Bernadotte Government"
+  FST_cn_party_long:0 "Bernadotte Government"
   FST_an_party:0 "German Pacific Authority"
   FST_an_party_long:0 "German Pacific Authority"
   FST_ni_party:0 "FRA"
