--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -2973,22 +2973,22 @@
     ICA_cn_ADJ:0 "Irish"
     ICA_an_ADJ:0 "Irish"
 
-    FST_ni:0 "Republic of Australie"
-    FST_ni_DEF:0 "the Republic of Australie"
-    FST_ds:0 "Republic of Australie"
-    FST_ds_DEF:0 "the Republic of Australie"
-    FST_rc:0 "Republic of Australie"
-    FST_rc_DEF:0 "the Republic of Australie"
-    FST_an:0 "Republic of Australie"
-    FST_an_DEF:0 "the Republic of Australie"
-    FST_cn:0 "Republic of Australie"
-    FST_cn_DEF:0 "the Republic of Australie"
-    FST_lb:0 "Republic of Australie"
-    FST_lb_DEF:0 "the Republic of Australie"
-    FST_ss:0 "Republic of Australie"
-    FST_ss_DEF:0 "the Republic of Australie"
-    FST_jc:0 "Australien Republic"
-    FST_jc_DEF:0 "the Australien Republic"
+    FST_ni:0 "Regency of Australie"
+    FST_ni_DEF:0 "the Regency of Australie"
+    FST_ds:0 "Regency of Australie"
+    FST_ds_DEF:0 "the Regency of Australie"
+    FST_rc:0 "Regency of Australie"
+    FST_rc_DEF:0 "the Regency of Australie"
+    FST_an:0 "Regency of Australie"
+    FST_an_DEF:0 "the Regency of Australie"
+    FST_cn:0 "Regency of Australie"
+    FST_cn_DEF:0 "the Regency of Australie"
+    FST_lb:0 "Regency of Australie"
+    FST_lb_DEF:0 "the Regency of Australie"
+    FST_ss:0 "Regency of Australie"
+    FST_ss_DEF:0 "the Regency of Australie"
+    FST_jc:0 "Regency of Australie"
+    FST_jc_DEF:0 "the Regency of Australie"
     FST_ni_ADJ:0 "Australien"
     FST_rc_ADJ:0 "Australien"
     FST_lb_ADJ:0 "Australien"
