--- a/localisation/english/PB_country_specific/PB_Australie_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Australie_l_english.yml
@@ -12,6 +12,15 @@
   # EVENTS
   ##########################
 
+  ######################
+  ####  CHARACTERS  ####
+  ######################
+
+  ### LEADERS ###
+  FST_francois_bernadotte: "Jean François Bernadotte"
+
+  ### ADMIRALS ###
+  FST_francois_bernadotte: "Jean François Bernadotte"
 
   ##########################
   # IDEAS
