New units & techs tweak

--- a/localisation/english/PB_equipment_country_variants_l_english.yml
+++ b/localisation/english/PB_equipment_country_variants_l_english.yml
@@ -205,3 +205,12 @@
  
  HUN_infantry_equipment_4:0 "Irányított Energiapuska 4"
  HUN_infantry_equipment_4_short:0 "IEP-4"
+ 
+  ## TUR
+  
+ techno_janissary_equipment:0 "Janissary E.A.A"
+ techno_janissary_equipment_short:0 "Janissary Engine-Assisted Armor"
+ 
+ techno_janissary_equipment_0:0 "Janissary E.A.A"
+ techno_janissary_equipment_0_short:0 "Janissary Engine-Assisted Armor"
+ techno_janissary_equipment_0_desc:0 "Similar to a conventional Hardsuit in terms of general design, the Engine-Assisted Armor prioritize the use of heavy pistons and mechanical components when it comes to physical enhancement — with little electronics onboard as a result. While bulkier and more primitive than its European counterpart, such armor effectively provides a non-negligeable firepower thanks to its embarked flamethrowers and mounted machinegun."
