--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -22,7 +22,7 @@
   cat_amalgamate: "Amalgamates"
   cat_jet_troopers: "Jet Troopers"
   cat_gunslingers: "Gunslingers"
-  cat_jager: "Jäger"
+  cat_jager: "Sturmtruppe"
   cat_transport_heli: "Transport Helicopters"
   cat_attack_heli: "Attack Helicopters"
   cat_techno_janissary: "Techno Janissary"
