--- a/localisation/english/PB_units_l_english.yml
+++ b/localisation/english/PB_units_l_english.yml
@@ -15,7 +15,9 @@
  elite_infantry: "Elite Infantry"
  elite_infantry_desc: "Not their first battle."
  gunslingers: "Gunslingers"
- gunslingers_desc: "Specialized Western Forces, Yee and Haw included"
+ gunslingers_desc: "Specialized western forces, Yee and Haw included."
+ sturmtruppen: "Sturmtruppe Infantry"
+ sturmtruppen_desc: "Elite force specialized in dealing with fortified positions and hardpoints."
 
  semi_motorized_cavalry: "Semi-Motorized Cavalry"
  semi_motorized_cavalry_desc: "Unit that consists of both horseback infantry as well as trucks. Something in between the two."
@@ -24,15 +26,18 @@
 
  group_augmented_bioeng_title: "Augmented & Bioeng. Battalions"
  combat_amalgamate: "Combat Amalgamates"
- combat_amalgamate_desc: "Questionably ethical cavalry replacement"
+ combat_amalgamate_desc: "Questionably ethical cavalry replacement."
  primordiform: "Primordiform Amalgamate"
- primordiform_desc: "Questionably ethical combat cavalry"
+ primordiform_desc: "Questionably ethical combat cavalry."
  hardsuits: "Hardsuits"
- hardsuits_desc: "Heavily Armored Augmented Infantry"
+ hardsuits_desc: "Heavily armored augmented infantry."
  razormaidens: "Razormaidens"
- razormaidens_desc: "Augmented Recon and Close Combat"
- clone_troopers: "Decanter Battalion"
- clone_troopers_desc: "Lobotomized Combat Teams, Disposable"
+ razormaidens_desc: "Augmented recon and close combat."
+ clone_troopers: "Decanter Battalions"
+ clone_troopers_desc: "Lobotomized combat teams, disposable."
+ 
+ techno_janissary: "Techno-Janissaries"
+ techno_janissary_desc: "Heavily armored infantry and finest fighters of the Sublime Porte."
 
   ## ARTILLERY ##
  anti_tank_brigade:1 "Anti-Landship"
@@ -43,51 +48,51 @@
  group_automat_title: "Automat Battalions"
  group_automat_combat_support_title: "Automat Combat Support Battalions"
  duopod_automat: "Duopod Automats"
- duopod_automat_desc: "Light Model Automatic Mech"
+ duopod_automat_desc: "Lighter, two-legged mechanical walker."
  tripod_automat: "Tripod Automats"
- tripod_automat_desc: "Medium Automatic Mech"
- quadrupod_automat: "Quadrupod Automats"
- quadrupod_automat_desc: "Heavy Automatic Mech"
+ tripod_automat_desc: "Robust, three-legged mechanical walker."
+ quadrupod_automat: "Quadripod Automats"
+ quadrupod_automat_desc: "Heavily weaponized, four-legged mechanical walker."
 
  aquapod_automat: "Aquapod Automat Battalion"
- aquapod_automat_desc: " "
+ aquapod_automat_desc: "Amphibious mechanical walker able to cross river and take parts in naval onslaughts."
 
  megapod_automat: "Megapod Automat"
- megapod_automat_desc: " "
+ megapod_automat_desc: "Massive and versatile walker carrying both heavy weaponry and logistical means on its titatanic hull."
 
  duopod_sp_artillery_brigade: "Duopod SP Artillery"
  duopod_sp_artillery_brigade_desc: " "
  tripod_sp_artillery_brigade: "Tripod SP Artillery"
  tripod_sp_artillery_brigade_desc: " "
- quadrupod_sp_artillery_brigade: "Quadrupod SP Artillery"
+ quadrupod_sp_artillery_brigade: "Quadripod SP Artillery"
  quadrupod_sp_artillery_brigade_desc: " "
 
  duopod_automat_destroyer_brigade: "Duopod Destroyer"
  duopod_automat_destroyer_brigade_desc: " "
  tripod_automat_destroyer_brigade: "Tripod Destroyer"
  tripod_automat_destroyer_brigade_desc: " "
- quadrupod_automat_destroyer_brigade: "Quadrupod Destroyer"
+ quadrupod_automat_destroyer_brigade: "Quadripod Destroyer"
  quadrupod_automat_destroyer_brigade_desc: " "
 
  duopod_sp_anti_air_brigade: "Duopod SP Anti-Air"
  duopod_sp_anti_air_brigade_desc: " "
  tripod_sp_anti_air_brigade: "Tripod SP Anti-Air"
  tripod_sp_anti_air_brigade_desc: " "
- quadrupod_sp_anti_air_brigade: "Quadrupod SP Anti-Air"
+ quadrupod_sp_anti_air_brigade: "Quadripod SP Anti-Air"
  quadrupod_sp_anti_air_brigade_desc: " "
 
  amphibious_duopod_automat: "Duopod Amphibious Battalion"
  amphibious_duopod_automat_desc: " "
  amphibious_tripod_automat: "Tripod Amphibious Battalion"
  amphibious_tripod_automat_desc: " "
- amphibious_quadrupod_automat: "Quadrupod Amphibious Battalion"
+ amphibious_quadrupod_automat: "Quadripod Amphibious Battalion"
  amphibious_quadrupod_automat_desc: " "
 
  duopod_flame_automat: "Duopod Flame Company"
  duopod_flame_automat_desc: " "
  tripod_flame_automat: "Tripod Flame Company"
  tripod_flame_automat_desc: " "
- quadrupod_flame_automat: "Quadrupod Flame Company"
+ quadrupod_flame_automat: "Quadripod Flame Company"
  quadrupod_flame_automat_desc: " "
 
 
