megapod pt1: special project

--- a/localisation/english/PB_special_projects_l_english.yml
+++ b/localisation/english/PB_special_projects_l_english.yml
@@ -8,36 +8,86 @@
 ##########################  
  sp_land_jet_trooper_suit: "Jet Trooper Suit"
  sp_land_jet_trooper_suit_desc: "A specialized suit for special forces soldiers, known as jet troopers. The armor, made of an alloy of aluminum, magnesium, and titanium, features an additional inner layer protecting against low temperatures and wind during high-altitude flights, while remaining both lightweight and durable. The helmet is equipped with a built-in target-illuminating module and a transmitter that reads brain waves to control the numerous nozzles distributed across the sleeves and legs of the suit. The primary propulsion system is a powerful jetpack powered by compressed gases, supplemented by traditional fuel."
+ sp_land_megapod: "Megapod"
+ sp_land_megapod_desc: "Research into quadrupods led scientists and engineers to design an even larger, heavier, and more unstoppable walking machine. This giant is capable of dominating the battlefield with its terrifying appearance and immense firepower."
 
 ##########################
-  ### BIOCHEM PROJECTS ###
+ ### BIOCHEM PROJECTS ###
 ##########################  
-  sp_biochem_combatagates_development: "Development of Combatagates"
-  sp_biochem_combatagates_development_desc: "Initially, amalgamates were designed to accelerate growth and the production of meat and other animal-derived products, with cattle being the primary focus. However, the mutated animals died withing few hours or days. The military, together with bioengineers, saw significant potential in this concept as a relatively easy-to-produce source of cannon fodder in the form of so-called combatagates. These utterly grotesque and godless creations are the result of gene mixing and modification designed to instill a thirst for blood. Thanks to their durability and strength, hordes of these creatures inflict severe damage on enemy infantry, while their appearance and speed have a psychological impact, often causing fear and disgust in people."
-  sp_biochem_primates_amalgamation: "Primates Amalgamation"
-  sp_biochem_primates_amalgamation_desc: "Years of research into various types of genetics raised many questions, one of which was, 'What if we tampered with the genes of great apes?' Thus, the idea was born to modify and mix the genes and chromosomes of primate species and humans, with a touch of bioengineering. Previously unthinkable, this concept has now become something that could provide an edge on the battlefield. From ethical concerns to fears of a potential revolution, the most determined scientists nonetheless decided to carry out inhumane research and experiments on such 'human-like' creatures, as well as on humans themselves."
-  sp_biochem_human_cloning: "Human Cloning"
-  sp_biochem_human_cloning_desc: "Cloning, once considered mere fantasy, something impossible, suddenly became the subject of research and experiments that ended in success. From simple multicellular organisms to reptiles, birds, and mammals, the time has now come for humans. A perfect replica, a copy, the impression of looking into a mirror—except the mirror isn’t there. Mass-scale cloning, subjecting the clones to lobotomies, and implanting clear commands into their brains turn these clones into ideal, obedient soldiers who don’t ask questions but act exactly as ordered."
-  sp_biochem_materiosynthetics: "Materiosynthetics"
-  sp_biochem_materiosynthetics_desc: "A method enabling the creation of crystalline forms of metals by isolating atoms and facilitating their growth around a nucleus. The applications in metallurgy are vast, including the production of metals with minimal effort in specialized chambers, the effortless creation of alloys that are otherwise difficult to obtain, or even the development of entirely new types of materials with a bit of work."
-  sp_biochem_chemical_weapons: "Chemical Weapons"
-  sp_biochem_chemical_weapons_desc: "Chemical weapons have been used for centuries, initially in primitive forms, but research into more advanced chemical weapons accelerated significantly during the Great War. This morally questionable solution, however, has its proponents and receives funding from both the military and the government. The latest, unprecedentedly advanced research will enable the creation of even more effective, lethal, and efficient chemical compounds that will physically and mentally devastate the enemy on the battlefield."
-  sp_biochem_biological_weapons: "Biological Weapons"
-  sp_biochem_biological_weapons_desc: "Biological warfare has been known to humanity since the dawn of history, with one of the most infamous cases being the devastation of Europe by the Mongols. They used the corpses of plague-infected individuals to unleash the so-called 'Black Death' upon Europe. In the following centuries, biological weapons were employed numerous times, but they never reached the sophistication seen today. The most highly trained bioengineers can now modify organisms as small as viruses and bacteria to wreak havoc. While humans can influence the behavior of microbes, they will never be able to fully control them. Biological weapons know no sides or borders..."
-  sp_biochem_livewire: "Livewire"
-  sp_biochem_livewire_desc: "Livewire was created during the mid-phase of the Great War. Its most infamous application was in the 'Iberian Campaign,' where traces of its use are still evident today in the form of Contamination Zones. Livewire is §R*CLASSIFIED*§!. It detects and reacts to the blood of living organisms, functioning on the principle of §R*CLASSIFIED*§!. When activated, Livewire quickly embeds itself into the victim's body, severing nerves, muscles, and veins, immobilizing the unfortunate target. It then wraps itself around its prey, gradually breaking down all organical matter while inflicting unimaginable pain. Throughout most of this process, the victim remains conscious."
+ sp_biochem_combatagates_development: "Development of Combatagates"
+ sp_biochem_combatagates_development_desc: "Initially, amalgamates were designed to accelerate growth and the production of meat andother animal-derived products, with cattle being the primary focus. However, the mutated animals died withing few hours or days. Themilitary, together with bioengineers, saw significant potential in this concept as a relatively easy-to-produce source of cannonfodder in the form of so-called combatagates. These utterly grotesque and godless creations are the result of gene mixing andmodification designed to instill a thirst for blood. Thanks to their durability and strength, hordes of these creatures inflictsevere damage on enemy infantry, while their appearance and speed have a psychological impact, often causing fear and disgust inpeople."
+ sp_biochem_primates_amalgamation: "Primates Amalgamation"
+ sp_biochem_primates_amalgamation_desc: "Years of research into various types of genetics raised many questions, one of which was,'What if we tampered with the genes of great apes?' Thus, the idea was born to modify and mix the genes and chromosomes of primatespecies and humans, with a touch of bioengineering. Previously unthinkable, this concept has now become something that could providean edge on the battlefield. From ethical concerns to fears of a potential revolution, the most determined scientists nonethelessdecided to carry out inhumane research and experiments on such 'human-like' creatures, as well as on humans themselves."
+ sp_biochem_human_cloning: "Human Cloning"
+ sp_biochem_human_cloning_desc: "Cloning, once considered mere fantasy, something impossible, suddenly became the subject of researchand experiments that ended in success. From simple multicellular organisms to reptiles, birds, and mammals, the time has now come forhumans. A perfect replica, a copy, the impression of looking into a mirror—except the mirror isn’t there. Mass-scale cloning,subjecting the clones to lobotomies, and implanting clear commands into their brains turn these clones into ideal, obedient soldierswho don’t ask questions but act exactly as ordered."
+ sp_biochem_materiosynthetics: "Materiosynthetics"
+ sp_biochem_materiosynthetics_desc: "A method enabling the creation of crystalline forms of metals by isolating atoms and facilitatingtheir growth around a nucleus. The applications in metallurgy are vast, including the production of metals with minimal effort inspecialized chambers, the effortless creation of alloys that are otherwise difficult to obtain, or even the development of entirelynew types of materials with a bit of work."
+ sp_biochem_chemical_weapons: "Chemical Weapons"
+ sp_biochem_chemical_weapons_desc: "Chemical weapons have been used for centuries, initially in primitive forms, but research intomore advanced chemical weapons accelerated significantly during the Great War. This morally questionable solution, however, has itsproponents and receives funding from both the military and the government. The latest, unprecedentedly advanced research will enablethe creation of even more effective, lethal, and efficient chemical compounds that will physically and mentally devastate the enemyon the battlefield."
+ sp_biochem_biological_weapons: "Biological Weapons"
+ sp_biochem_biological_weapons_desc: "Biological warfare has been known to humanity since the dawn of history, with one of the mostinfamous cases being the devastation of Europe by the Mongols. They used the corpses of plague-infected individuals to unleash theso-called 'Black Death' upon Europe. In the following centuries, biological weapons were employed numerous times, but they neverreached the sophistication seen today. The most highly trained bioengineers can now modify organisms as small as viruses and bacteriato wreak havoc. While humans can influence the behavior of microbes, they will never be able to fully control them. Biologicalweapons know no sides or borders..."
+ sp_biochem_livewire: "Livewire"
+ sp_biochem_livewire_desc: "Livewire was created during the mid-phase of the Great War. Its most infamous application was in the'Iberian Campaign,' where traces of its use are still evident today in the form of Contamination Zones. Livewire is §R*REDACTED*§!.It detects and reacts to the blood of living organisms, functioning on the principle of §R*REDACTED*§!. When activated, Livewirequickly embeds itself into the victim's body, severing nerves, muscles, and veins, immobilizing the unfortunate target. It then wrapsitself around its prey, gradually breaking down all organical matter while inflicting unimaginable pain. Throughout most of this process, the victim remains conscious."
 
  ###### SPECIAL PROJECT TAGS ########
-  sp_tag_bioengineering: "Bioengineering Projects"
-  sp_tag_amalgamate: "Amalgamates Projects"
-  sp_tag_chemistry: "Chemistry Projects"
-  sp_tag_industry: "Industry Projects"
-  sp_tag_industry: "Industry Projects"
-  sp_tag_augmentation: "Augmentation Projects"
-  sp_tag_microbes: "Microbes Projects"
-  sp_tag_chemical_weapons: "Chemical Weapons Projects"
-  sp_tag_biological_weapons: "Biological Weapons Projects"
-  sp_tag_livewire: "Livewire Projects"
+ sp_tag_bioengineering: "Bioengineering Projects"
+ sp_tag_amalgamate: "Amalgamates Projects"
+ sp_tag_chemistry: "Chemistry Projects"
+ sp_tag_industry: "Industry Projects"
+ sp_tag_industry: "Industry Projects"
+ sp_tag_augmentation: "Augmentation Projects"
+ sp_tag_microbes: "Microbes Projects"
+ sp_tag_chemical_weapons: "Chemical Weapons Projects"
+ sp_tag_biological_weapons: "Biological Weapons Projects"
+ sp_tag_livewire: "Livewire Projects"
+
+################################
+  ### LAND REWARDS ###
+################################
+
+ sp_land_reward_megapod_overheating: "Internal Overheating"
+ sp_land_reward_megapod_overheating_desc: "While testing the ventilation systems, we discovered that the interior of the [SpecialProject.GetName] heats up to very high temperatures due to all the mechanisms. This could lead to more frequent breakdowns or fainting among the crew. We can fit better cooling systems or leave the current ones untouched."
+ sp_land_reward_option_megapod_overheating_keep: "Keep as is"
+ sp_land_reward_option_megapod_overheating_cooling_system: "Install better cooling systems"
+ sp_land_reward_megapod_structure: "Structural Failure"
+ sp_land_reward_megapod_structure_desc: "Stress tests of the overall structure of the [SpecialProject.GetName] revealed weaknesses in the form of the machine's external as well as internal skeleton. These weaknesses can lead to critical failures under usage and combat. The team is divided between proponents of a complete rebuild of the skeleton, additional reinforcement of it or the use of better materials."
+ sp_land_reward_option_megapod_structure_redesign: "Complete Redesign"
+ sp_land_reward_option_megapod_structure_reinforce: "Reinforced Skeleton"
+ sp_land_reward_option_megapod_structure_better_materials: "Better Materials"
+ sp_land_reward_megapod_engine: "Underperforming Engine"
+ sp_land_reward_megapod_engine_desc: "The first tests of the engine's performance in the [SpecialProject.GetName]'s massive structure showed that our current engines could not meet the huge power demand. We have a choice: to leave the current engine which is highly inefficient, to upgrade it which can lead to failure, or to design a completely new engine designed for this kind of machines."
+ sp_land_reward_option_megapod_engine_keep: "Keep as is"
+ sp_land_reward_option_megapod_engine_modify: "Upgrade Current Engine"
+ sp_land_reward_option_megapod_engine_new: "Design New Engine"
+ sp_land_reward_megapod_gun_pod: "Weapon Pods Systems"
+ sp_land_reward_megapod_gun_pod_desc: "The [SpecialProject.GetName]'s main armament is expected to consist of a system of weapons pods distributed at various points in the framework. Engineering teams are arguing over simplifying the mechanisms and reducing the mobility of the weapons, or rebuilding them."
+ sp_land_reward_option_megapod_gun_pod_original: "Keep Original Pods"
+ sp_land_reward_option_megapod_gun_pod_simplify: "Simplify Gun Pods"
+ sp_land_reward_option_megapod_gun_pod_redesign: "Redesign Pods Mechanism"
+ sp_land_reward_megapod_footpads: "Footpads Failure"
+ sp_land_reward_megapod_footpads_desc: "The [SpecialProject.GetName]'s weight has turned out to be so extreme that the current footpads are cracking during testing, and there are also instances of the structure sinking into the ground and having difficulty moving. Engineers can improve the current footpads or design a new model to adapt to a variety of ground."
+ sp_land_reward_option_megapod_footpads_current: "Keep Current Footpads"
+ sp_land_reward_option_megapod_footpads_upgrade: "Upgrade Exisiting Footpads"
+ sp_land_reward_option_megapod_footpads_new: "Develop New Footpads"
+ sp_land_reward_megapod_communication: "Communication System Problem"
+ sp_land_reward_megapod_communication_desc: "The [SpecialProject.GetName] large size requires a developed internal communication system to coordinate the team. The current system is insufficient, with some information getting lost or not delivered at all. Engineers recommend upgrading the current system, or installing a new, experimental one."
+ sp_land_reward_option_megapod_communication_current: "Keep Current System"
+ sp_land_reward_option_megapod_communication_redesign: "Redesign Current System"
+ sp_land_reward_option_megapod_communication_new: "Install Experimental Systems"
+ sp_land_reward_megapod_assembly: "Advanced Assembly"
+ sp_land_reward_megapod_assembly_desc: "The engineering team has developed an efficient assembly system for [SpecialProject.GetName] parts. This technique allows for much less structural stress when using such large and heavy components. How should we use it?"
+ sp_land_reward_option_megapod_assembly_entire: "Entire Structure"
+ sp_land_reward_option_megapod_assembly_crucial: "Only Crucial Parts"
+ sp_land_reward_megapod_legs: "Legs Failure"
+ sp_land_reward_option_megapod_legs_keep: "Keep Current Legs"
+ sp_land_reward_option_megapod_legs_reinforced_joints: "Reinforce Joints"
+ sp_land_reward_option_megapod_legs_better_suspension: "Rebuild Suspension"
+ sp_land_reward_option_megapod_legs_new: "Design New Legs"
+ sp_land_reward_megapod_ammunition: "Ammunition Storage and Systems"
+ sp_land_reward_megapod_ammunition_desc: "During testing, concerns were raised about the safety of transporting and storing high-caliber ammunition for the [SpecialProject.GetName]. Technicians recommend strengthening the bulkheads and improving loading mechanisms and security features."
+ sp_land_reward_option_megapod_ammunition_current: "Keep Current Systems"
+ sp_land_reward_option_megapod_ammunition_simplified: "Simplify Mechanism"
+ sp_land_reward_option_megapod_ammunition_new: "Create New Systems"
 
 ################################
   ### BIOCHEM REWARDS ###
@@ -82,14 +132,14 @@
  sp_biochem_generic_reward_option_test_subject_escaped_capture: "Capture Test Subject"
  sp_biochem_generic_reward_option_test_subject_escaped_kill: "Kill Test Subject"
 
- sp_biochem_primates_amalgamation_species_choice_reward: "Which Genome"
+ sp_biochem_primates_amalgamation_species_choice_reward: "Choosing Genome"
  sp_biochem_primates_amalgamation_species_choice_reward_desc: "During research on different types of primates, scientists observed that primodiforms based on the genomes of bonobos or chimpanzees would be the most effective. The former exhibit more social and organized traits, while the latter are more aggressive, resilient, and inclined toward combat. This decision will determine the further direction of research on [SpecialProject.GetName]."
  sp_biochem_primates_amalgamation_species_choice_reward_bonobo: "Bonobo Genome"
  sp_biochem_primates_amalgamation_species_choice_reward_chimpanzee: "Chimpanzee Genome"
 
  sp_biochem_materiosynthetic_metal_choice_reward: "Type of Metals"
  sp_biochem_materiosynthetic_metal_choice_reward_desc: "Our scientists are considering which development path for the [SpecialProject.GetName] project would be more beneficial: focusing on the synthesis of more common metals, which would be less expensive, or rarer ones, which, on the other hand, is a more costly option."
-sp_biochem_materiosynthetic_metal_choice_reward_neither: "Focus on Neither"
+ sp_biochem_materiosynthetic_metal_choice_reward_neither: "Focus on Neither"
  sp_biochem_materiosynthetic_metal_choice_reward_common: "Focus on Common Metals"
  sp_biochem_materiosynthetic_metal_choice_reward_rare: "Focus on Rare Metals"
  materiosynthesis_focus_on_neither_tt: "§YMaterosynthesis Technology§! output will not change"
