Asian peace deals work & tech GFX tweaks

--- a/localisation/english/PB_annexations_l_english.yml
+++ b/localisation/english/PB_annexations_l_english.yml
@@ -210,5 +210,55 @@
   annexation_rio_de_la_plata: "The Fate of Rio de la Plata"
   annexation_rio_de_la_plata_desc: "The region of Rio de la Plata has been brought under our control as our troops occupy the region. We must now decide what to do with it."
   annexation.3003.a: "Liberate Rio de la Plata"
+    
+    # ASIA
+
+  annexation_decision_mongolia: "Fate of Mongolia"
+  annexation_decision_mongolia_desc: "The region of Mongolia has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.7000.a: "Liberate Mongolia"
+  annexation.republic_of_china: "Retrocedes it to the Republic of China"
+  annexation.give_to_china: "Retrocedes it to the Taiping"
+  
+  annexation_decision_gansu: "Fate of Gansu"
+  annexation_decision_gansu_desc: "The region of Gansu has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.7001.a: "Liberate Gansu"
+  
+  annexation_decision_sinkiang: "Fate of Sinkiang"
+  annexation_decision_sinkiang_desc: "The region of Sinkiang has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.7002.a: "Liberate Sinkiang"
+  annexation.give_to_russia: "Perhaps Russia would be intersted by it"
+  
+  annexation_decision_east_turkestan: "Fate of East Turkestan"
+  annexation_decision_east_turkestan_desc: "The region of East Turkestan has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.7003.a: "Liberate East Turkestan"
+  
+  annexation_decision_kumul: "Fate of Kumul"
+  annexation_decision_kumul_desc: "The region of Kumul has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.7004.a: "Liberate Kumul"
+  annexation.give_to_turkestan: "Integrate it into Sinkiang proper"
+  
+  annexation_decision_xibei: "Fate of Xibei"
+  annexation_decision_xibei_desc: "The region of Xibei has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.7005.a: "Liberate Xibei"
+  annexation.give_to_sinkiang: "The Russian colonial domain would shine with such addition"
+  
+  annexation_decision_tibet: "Fate of Tibet"
+  annexation_decision_xibei_desc: "The region of Tibet has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.7006.a: "Liberate Tibet"
+  
+  annexation_decision_yunnan: "Fate of Yunnan"
+  annexation_decision_yunnan_desc: "The region of Yunnan has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.7007.a: "Liberate Yunnan"
+  
+  annexation_decision_hong_kong: "Fate of the Pearl River Area"
+  annexation_decision_hong_kong_desc: "The Pearl River area has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.7008.a: "Liberate Guangdong"
+  annexation.give_to_quadcom: "Integrate it into the Quadcom Mandate"
+  annexation.retain_hong_kong: "Keep Hong-Kong only"
+  
+  annexation_decision_shanghai: "Fate of the Quadrilateral Commission"
+  annexation_decision_shanghai_desc: "The regions formerly controlled by the Quadrilateral Commission has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.7009.a: "Liberate Shanghai, Tsingtao and Qinhuangdao"
+  annexation.retain_tsingtao: "Keep Tsingtao only"
 
   #Events
